# request-manager

./: .gitignore  README.md  demo.py  flake.nix  full_test.py  project-plan.md  raw  setup.py  simple_task_test.py  test_meituan_import.py  test_retry_functionality.py  项目完善总结.md
backend/: MANIFEST.in  config.json  create_tables.py  debug_tables.py  install_and_run.py  pyproject.toml  requirements.txt  start.py  test_fiddler_data.txt  test_parser.py  test_setup.py  test_task.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  executions.py  requests.py  system.py  tasks.py
backend/app/core/: __init__.py  config_manager.py
backend/app/models/: __init__.py  base.py  execution.py  request.py  task.py
backend/app/schemas/: __init__.py  execution.py  request.py  response.py  task.py
backend/app/services/: __init__.py  executor_service.py  network_time_service.py  request_service.py  scheduler_service.py  task_service.py
backend/app/utils/: __init__.py  parser.py
frontend/: README.md  package.json  pnpm-lock.yaml  start_frontend.sh  test_frontend.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  executionApi.ts  requestApi.ts  systemApi.ts  taskApi.ts
frontend/src/components/: MillisecondTimePicker.tsx
frontend/src/components/common/: Layout.tsx
frontend/src/components/request/: ImportModal.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/Requests/: index.tsx
frontend/src/pages/Settings/: index.tsx
frontend/src/pages/Tasks/: index.tsx
frontend/src/pages/Tasks/components/: FiddlerImportModal.tsx  RetryDiagnostic.tsx  TaskForm.tsx
frontend/src/types/: api.ts  request.d.ts  task.d.ts
frontend/src/utils/: parser.ts  test-parser.ts
nix/: exported.nix
nix/backend/: default.nix
nix/dev-shell/: default.nix
nix/frontend/: default.nix
